modification font-size, correction rapport contrast, page contact renommée

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1662,7 +1662,8 @@ mark {
 }
 
 .text-justify {
-    text-align: justify
+    text-align: justify;
+    text-justify: distribute;
 }
 
 .text-nowrap {
@@ -2065,8 +2066,8 @@ pre code {
 .col-xs-9 {
     position: relative;
     min-height: 1px;
-    padding-right: 15px;
-    padding-left: 15px
+    padding-right: 4rem;
+    padding-left: 4rem
 }
 
 .col-xs-1,
